<resources>
    <string name="app_name">Systemize</string>
    <string name="get_started">Get Started</string>
    <string name="bio">Bio</string>
    <string name="occupation">Occupation</string>
    <string name="journal">journal</string>
    <string name="create_task">Create Task</string>
    <string name="duration">duration</string>
    <string name="calendarbutton">calendarbutton</string>
    <string name="task_name">Task Name</string>
    <string name="create_new_task">Create New Task</string>
    <string name="pretty_productive">Pretty productive!</string>
    <string name="next">Next</string>
    <string name="productive">productive</string>
    <string name="i_m_struggling_please_help">I\'m struggling — please help!</string>
    <string name="i_m_alright_but_could_be_better">I\'m alright, but could be better!</string>
    <string name="nice_to_meet_you">Nice to meet you!</string>
    <string name="now_how_productive_would_nyou_say_you_are_each_week">Now, how productive would \nyou say you are each week?</string>
    <string name="welcome_to_systemize">Welcome to Systemize!</string>
    <string name="we_want_to_help_you_colour_code_your_daily_tasks_and_check_them_off_as_you_go">We want to help you colour code your daily tasks and check them off as you go.</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="social">Social</string>
    <string name="finances">Finances</string>
    <string name="family">Family</string>
    <string name="school">School</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="bio">Bio</string>
</resources>