<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/beige"
    >

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_medium"
        android:text="@string/welcome_to_systemize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.4"
        />


    <TextView
        android:id="@+id/help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:fontFamily="@font/futura_medium"
        android:layout_margin="20dp"
        android:text="@string/we_want_to_help_you_colour_code_your_daily_tasks_and_check_them_off_as_you_go"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@id/task_types"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_message" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/onboarding_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_types"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:weightSum="2"
        android:id="@+id/task_types"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_message"
        android:layout_marginTop="35dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/work"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/living"/>

    </LinearLayout>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/task_types"
            android:id="@+id/work_living_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_medium"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/work"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_medium"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/personal"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:weightSum="2"
            android:id="@+id/hug_bill"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/work_living_text">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/hug"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/bill"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:weightSum="2"
            android:id="@+id/hug_bill_text"
            app:layout_constraintTop_toBottomOf="@id/hug_bill"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_medium"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/social"
                android:gravity="center"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_medium"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/finances"
                android:gravity="center"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:weightSum="2"
            android:id="@+id/family_knowledge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hug_bill_text"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/family"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/knowledge"/>

        </LinearLayout>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/family_knowledge"
            android:id="@+id/family_knowledge_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_medium"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/family"
                android:gravity="center"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_medium"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/school"
                android:gravity="center"
                android:layout_weight="1"
                />
        </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:background="@drawable/next_button"
        android:text="Next"
        android:onClick="onStartClicked"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/futura_medium"
        app:layout_constraintTop_toBottomOf="@id/family_knowledge_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>